2011-01-04    <d.scott@auckland.ac.nz>

	* ghypChangePars changed to add fifth parameterization. Also order
	of parameters changed in second parameterization to make rho the
	third element of the parameter vector. This to agree with the rule
	that the third parameter should relate to the skewness

2010-11-03    <d.scott@auckland.ac.nz>

	* hyperbHessian, nigHessian, gigHessian all added for calculation
	of hessians of likelihoods

	* gigParam added for testing gig functions

	* gigFit, gigFitStart, summary.gigFit and gig data fitting
	examples added, mainly work of David Cusack


2010-09-01    <d.scott@auckland.ac.nz>

	* qqgig, ppgig defaults changed when calculating quantiles and
	probabilities to make them quicker and more reliable---very large
	tolerances used since differences won't be obvious in plots

	* pgig, qgig changed so that pgig uses incompleteBesselK from
	DistributionUtils, and qgig uses the two part split at the mode
	and then optionally a spline fit or integration

2010-08-04    <d.scott@auckland.ac.nz>

	* nig functions added (dnig, pnig, qnig, rnig, nigFit,
	nigFitStart, etc)


2010-06-25    <d.scott@auckland.ac.nz>

	* ghypParam recreated to avoid using ghypChangeParam which causes
	errors when building or checking

2010-06-22    <d.scott@auckland.ac.nz>

	* pghyp, qghyp modified using split at the mode

	* plotShapeTriangle added so parameter values can be plotted on it
	in examples for ghypParam to give just one use

2010-06-20    <d.scott@auckland.ac.nz>

	* nig functions added by Christine Dong: nigFit, nigFitStart, dqpr
	functions for nig, nigCalcRange, moments for the nig

	* gigFit and gigFitStart added to allow for fitting of the
	generalized inverse Gaussian. Plot, print and summary methods are
	included with the fitting routines.

	* gigParam added to allow testing of the generalized inverse Gaussian

	* ghypParam changed to give spread of values over the shape
	triangle


2010-02-09    <d.scott@auckland.ac.nz>
