@@ -24,7 +24,8 @@ ghypCheckPars <- function(param) {
       if (lambda == 0) {
         if (abs(beta) >= alpha) {
           case <- "error"
-          errMessage <- "absolute value of beta must be less than alpha when lambda = 0"
+          errMessage <-
+              "absolute value of beta must be less than alpha when lambda = 0"
         }
 
         if (delta <= 0) {
@@ -84,7 +85,8 @@ ghypCheckPars <- function(param) {
 
         if (abs(beta) > alpha & delta <= 0) {
           case <- "error"
-          errMessage <- "absolute value of beta must be less than or equal to alpha and delta must be greater than zero when lambda < 0"
+          errMessage <-
+              "absolute value of beta must be less than or equal to alpha and delta must be greater than zero when lambda < 0"
         }
 
         if (case != "error") {
