@@ -14,4 +14,7 @@ Fix documentation also: arguments and return list
 
 Add more unit testing routines
 
+Add data sets from Eric Morway as examples.
+
+Add data set from Kevin Lin as an example.
 
